--- a/src/utils/Translations/Ge/Global.json
+++ b/src/utils/Translations/Ge/Global.json
@@ -16,8 +16,9 @@
     "rights": "ყველა უფლება დაცულია"
   },
   "Home": {
-    "title": "ჯი-ენ-სი",
+    "title": "გეო ნეიჩერალ კორპორაცია",
     "projects": "პროექტები",
+    "mainObjectives": "მთავარი მიზნები",
     "lorem": "შეწუხებულსავით გადმობრუნდა. გაფანტლეში დამემდურა გიბა ახასიათებთო. შეწუხებულსავით ეგონებოდათ პირველმა, განძეულობას ქუში ირეკლავს"
   },
   "About": {
