--- a/src/utils/Translations/Ge/Global.json
+++ b/src/utils/Translations/Ge/Global.json
@@ -22,12 +22,18 @@
     "lorem": "შეწუხებულსავით გადმობრუნდა. გაფანტლეში დამემდურა გიბა ახასიათებთო. შეწუხებულსავით ეგონებოდათ პირველმა, განძეულობას ქუში ირეკლავს"
   },
   "About": {
-    "lorem": "შეწუხებულსავით გადმობრუნდა. გაფანტლეში დამემდურა გიბა ახასიათებთო. შეწუხებულსავით ეგონებოდათ პირველმა, განძეულობას ქუში ირეკლავს",
+    "lorem": "ჩვენი საკონსულტაციო კომპანია, რომელიც დაარსდა 2017 წელს, სპეციალიზირებულია გარემოს დაცვასა და უსაფრთხოებაში. ჩვენ ინტენსიურად ვთანამშრომლობთ როგორც საჯარო, ისე კერძო სექტორის ორგანიზაციებთან. ჩვენი პორტფელი მოიცავს მნიშვნელოვან წვლილს ინფრასტრუქტურული პროექტებისა და სხვადასხვა მასშტაბის საწარმოო ობიექტების განვითარებაში.",
     "faq": "ხშირად დასმული კითხვები",
-    "answer1": "პირველი სექციის პასუხი",
-    "answer2": "მეორე სექციის პასუხი",
-    "answer3": "მესამე სექციის პასუხი",
-    "answer4": "პირველი სექციის პასუხი"
+    "question1": "რა განასხვავებს თქვენს საკონსულტაციო მომსახურებას გარემოს დაცვისა და უსაფრთხოების თვალსაზრისით?",
+    "question2": "როგორ ურთიერთობს თქვენი კომპანია დაინტერესებულ მხარეებთან და საზოგადოებასთან?",
+    "question3": "რა შედეგებს შეიძლება ელოდონ კლიენტები თქვენი სერვისებისგან?",
+    "question4": "როგორ რჩება თქვენი კომპანია განახლებული სტანდარტებისა და რეგულაციების შესახებ?",
+    "question5": "როგორ უწყობს ხელს თქვენი კომპანია ადგილობრივ და რეგიონულ განვითარებას?",
+    "answer1": "ჩვენ ვაერთიანებთ საერთაშორისო საუკეთესო პრაქტიკას ადგილობრივ რეგულაციებთან, რაც უზრუნველყოფს კლიენტის საჭიროებებზე მორგებულ ყოვლისმომცველ გადაწყვეტილებებს გარემოს მდგრადობისა და უსაფრთხოებისთვის.",
+    "answer2": "ჩვენ პრიორიტეტს ვანიჭებთ საზოგადოებრივ ადვოკატირებას, ცნობიერების ამაღლებას და დაინტერესებულ მხარეთა ჩართულობას, რათა უზრუნველყოს გამჭვირვალობა და ანგარიშვალდებულება გარემოსდაცვით ინიციატივებში.",
+    "answer3": "კლიენტებს შეუძლიათ მიაღწიონ გაუმჯობესებულ გარემოსდაცვით საქმიანობას, მარეგულირებელ შესაბამისობას, დაინტერესებულ მხარეებთან ურთიერთობის გაძლიერებას და მდგრადი განვითარების მიზნების მხარდაჭერას.",
+    "answer4": "ჩვენ ვრჩებით ინფორმირებულნი საერთაშორისო ორგანოებთან თანამშრომლობით, მარეგულირებელი ცვლილებების მუდმივი მონიტორინგით და უწყვეტი პროფესიული განვითარების გზით, რათა მივაწოდოთ მიმდინარე სახელმძღვანელო გარემოს მენეჯმენტსა და მდგრადობაზე.",
+    "answer5": "ჩვენ მხარს ვუჭერთ ადგილობრივ და რეგიონულ პროგრამებს სტრატეგიული რჩევებით გარემოსდაცვითი და ხარისხთან დაკავშირებულ საკითხებზე, ხელს უწყობს მდგრადი პრაქტიკისა და შესაძლებლობების განვითარებას."
   },
   "Contact": {
     "getInTouch": "დაგვიკავშირდით !",
@@ -40,5 +46,16 @@
     "email": "იმეილი",
     "message": "მესიჯი",
     "send": "გაგზავნა"
+  },
+  "Projects": {
+    "1": "გარემოზე ზემოქმედების შეფასების ანგარიშის მომზადება",
+    "2": "სტრატეგიული გარემოსდაცვითი ანგარიშის მომზადება",
+    "3": "ზურმუხტის ქსელზე ზემოქმედების შეფასების ანგარიში",
+    "4": "ბიომრავალფეროვნების დეტალური კვლევა, შერბილების და მონიტორინგის გეგმის მომზადება",
+    "5": "კონსულტაციები გარემოსდაცვითი გადაწყვეტილების პირობების შესრულების მიზნით",
+    "6": "ზღრულად დასაშვები ჩაშვების (ზდჩ) ნორმების პროექტის მომზადება",
+    "7": "ზღრულად დასაშვები გაფრქვევის (ზდგ) ნორმების პროექტის მომზადება",
+    "8": "გარემოსდაცვითი მართვის გეგმის და გარემოსდაცვითი გეგმის მომზადება",
+    "9": "ნარჩენების მართვის გეგმის მომზადება"
   }
 }
