--- a/src/utils/Translations/Ge/Global.json
+++ b/src/utils/Translations/Ge/Global.json
@@ -3,13 +3,13 @@
     "home": "მთავარი",
     "about": "ჩვენს შესახებ",
     "contact": "კონტაქტი",
-    "projects": "პოექტები"
+    "projects": "პროექტები"
   },
   "Footer": {
     "home": "მთავარი",
     "about": "ჩვენს შესახებ",
     "contact": "კონტაქტი",
-    "projects": "პოექტები",
+    "projects": "პროექტები",
     "quickLinks": "ლინკები",
     "contactUs": "კონტაქტი",
     "lorem": "შეწუხებულსავით გადმობრუნდა. გაფანტლეში დამემდურა გიბა ახასიათებთო. შეწუხებულსავით ეგონებოდათ პირველმა, განძეულობას ქუში ირეკლავს",
