add georgian content

--- a/src/utils/Translations/Ge/Global.json
+++ b/src/utils/Translations/Ge/Global.json
@@ -18,8 +18,19 @@
   "Home": {
     "title": "გეო ნეიჩერალ კორპორაცია",
     "projects": "პროექტები",
-    "mainObjectives": "მთავარი მიზნები",
-    "lorem": "შეწუხებულსავით გადმობრუნდა. გაფანტლეში დამემდურა გიბა ახასიათებთო. შეწუხებულსავით ეგონებოდათ პირველმა, განძეულობას ქუში ირეკლავს"
+    "mainObjectives": "ძირითადი მიზნები",
+    "objectivesOne": "საქართველოში ეფექტური ხარისხისა და გარემოსდაცვითი სტრატეგიების შემუშავების ხელშეწყობა.",
+    "objectivesTwo": "ბაზარზე ორიენტირებული რეფორმებისა და საუკეთესო დასავლურ (ევროკავშირის) სტანდარტებთან ხარისხისა და გარემოს დაცვის სფეროებში ჰარმონიზაციის ეფექტური სამართლებრივი, მარეგულირებელი და სტრუქტურული ჩარჩოს შექმნის ხელშეწყობა",
+    "objectivesThree": "საზოგადოებრივი ადვოკატირება, საზოგადოების ცნობიერების ამაღლება, საზოგადოების მონაწილეობის წახალისება და სამოქალაქო საზოგადოების კონტროლი ხარისხისა და გარემოს დაცვის სფეროებში.",
+    "objectivesFour": "კარგი მმართველობის, გამჭვირვალე და ინფორმირებული გადაწყვეტილების მიღების ხელშეწყობა ხარისხისა და გარემოს დაცვის სექტორებში.",
+    "objectivesFive": "ხარისხთან და გარემოსთან დაკავშირებული ადგილობრივი და რეგიონული განვითარების პროგრამებისა და სტრატეგიული მნიშვნელობის პროექტების პროფესიული მხარდაჭერა.",
+
+    "mainActivities": " ძირითადი საქმიანობა",
+    "activityOne": "გარემოსდაცვითი და სოციალური კვლევების ჩატარება და საკონსულტაციო მომსახურება.",
+    "activityTwo": "საქართველოს კანონმდებლობის შესაბამისად დოკუმენტაციის შემუშავება ბუნებრივ და სოციალურ ზემოქმედების შეფასება (ESIA), საწყისი გარემოსდაცვითი გამოცდები (IEE), გარემოსდაცვითი პოლიტიკის ჩარჩოები, სტრატეგიული გარემოსდაცვითი შეფასება (SEA) სახელმწიფო ინსტიტუტებიდან დადებითი ეკოლოგიური გადაწყვეტილებების და შესაბამისი ნებართვების მისაღებად.",
+    "activityThree": "ინოვაციური გადაწყვეტილებების მიწოდება და სხვადასხვა ორგანიზაციების დახმარება მდგრადობის გამოწვევების გაგებაში და მართვაში.",
+    "activityFour": "საერთაშორისო სტანდარტების (E&S) შესაბამისი დოკუმენტაციის შემუშავება (IFC PSs, Asian Development Bank (ADB) Safeguard Policy Statement (SPS), 2009; მსოფლიო ბანკის ჯგუფის ზოგადი გარემოსდაცვითი, ჯანმრთელობისა და უსაფრთხოების (EHS) სახელმძღვანელო პრინციპები, 2007 წლის აპრილი, მსოფლიო ბანკის ჯგუფის EHS სახელმძღვანელო მითითებები შრომის საერთაშორისო ორგანიზაციის (ILO) კონვენციები, რომლებიც მოიცავს შრომის ძირითად სტანდარტებს და დასაქმების ძირითად პირობებს და ა.შ.) საერთაშორისო საფინანსო ინსტიტუტებისგან (IFI) დაფინანსების მისაღებად.",
+    "activityFive": "სხვადასხვა კომპანიებისთვის გარემოსდაცვითი და სოციალური მართვის სისტემის (ESMS) შემუშავება და დანერგვა და მათი დახმარება ISO 14001:2015 გარემოსდაცვითი მართვის სისტემების შესახებ და ISO 45001:2018 შრომის ჯანმრთელობისა და უსაფრთხოების მართვის სისტემების შესახებ."
   },
   "About": {
     "lorem": "ჩვენი საკონსულტაციო კომპანია, რომელიც დაარსდა 2017 წელს, სპეციალიზირებულია გარემოს დაცვასა და უსაფრთხოებაში. ჩვენ ინტენსიურად ვთანამშრომლობთ როგორც საჯარო, ისე კერძო სექტორის ორგანიზაციებთან. ჩვენი პორტფელი მოიცავს მნიშვნელოვან წვლილს ინფრასტრუქტურული პროექტებისა და სხვადასხვა მასშტაბის საწარმოო ობიექტების განვითარებაში.",
