change few styles

--- a/src/utils/Translations/En/Global.json
+++ b/src/utils/Translations/En/Global.json
@@ -27,7 +27,7 @@
 
     "mainActivities": "Main Activities",
     "activityOne": "Conducting environmental and social researches and consulting services.",
-    "activityTwo": "Developing documentation in line with Georgian legislation (Environmental and Social Impact Assessments (ESIA); Initial Environmental Examinations (IEE); Environmental Policy Frameworks; Strategic Environmental Assessment (SEA) to obtain positive ecological decisions and related permits from the State institutions.",
+    "activityTwo": "Developing documentation in line with Georgian legislation Environmental and Social Impact Assessments (ESIA), Initial Environmental Examinations (IEE), Environmental Policy Frameworks, Strategic Environmental Assessment (SEA) to obtain positive ecological decisions and related permits from the State institutions.",
     "activityThree": "Delivering innovative solutions and helping different organizations to understand and manage their sustainability challenges.",
     "activityFour": "Developing documentation in line with international E&S Standards (IFC PSs, Asian Development Bank (ADB) Safeguard Policy Statement (SPS), 2009; World Bank Group General Environmental, Health and Safety (EHS) Guidelines, April 2007; World Bank Group EHS Guidelines for Water and Sanitation; International Labor Organization (ILO) conventions covering core labor standards and the basic terms and conditions of employment, etc.) to obtain financing from International Financing Institutions (IFI).",
     "activityFive": "Developing and introducing Environmental and Social Management System (ESMS) for different companies and helping them to obtain ISO 14001:2015 on Environmental Management Systems and ISO 45001:2018 on Occupational Health and Safety Management Systems. "
